--- a/404.html
+++ b/404.html
@@ -52,125 +52,121 @@
 
 
 
-	<!-- ==========Aquí inicia la sección de encabezado========== -->
-	<header class="header-section">
-		<div class="container">
-			<div class="header-holder d-flex flex-wrap justify-content-between align-items-center">
-				<div class="brand-logo d-none d-lg-inline-block">
-					<div class="logo">
-						<a href="index-2.html">
-							<img src="assets/images/logo/atlant.png" alt="logo">
-						</a>
-					</div>
-				</div>
-				<div class="header-menu-part">
-					<div class="header-top">
-						<div class="header-top-area">
-							<ul class="left">
-								<li>
-									<i class="icofont-ui-call"></i>(01) 705-4440
-								</li>
-								<li>
-									<i class="icofont-location-alt"></i> Av. Alfredo Benavides 430, Miraflores 15074
-								</li>
-							</ul>
-							<ul class="social-icons d-flex align-items-center">
-								<li>
-									<a href="https://www.facebook.com/AtlanticCityPe" class="fb"><i class="icofont-facebook-messenger"></i></a>
-								</li>
-								<li>
-									<a href="https://x.com/AcityCasino" class="twitter"><i class="icofont-twitter"></i></a>
-								</li>
-								<li>
-									<a href="https://www.youtube.com/@atlanticcitycasinosports" class="Youtube"><i class="icofont-youtube-play"></i></a>
-								</li>
-								<a href="https://www.youtube.com/@atlanticcitycasinosports" class="Youtube"><i class="icofont-youtube-play"></i></a>
-								<li>
-									<a href="#" class="rss"><i class="icofont-rss-feed"></i></a>
-								</li>
-							</ul>
+		<!-- ==========Inicio de la sección de encabezado========== -->
+		<header class="header-section">
+			<div class="container">
+				<div class="header-holder d-flex flex-wrap justify-content-between align-items-center">
+					<div class="brand-logo d-none d-lg-inline-block">
+						<div class="logo">
+							<a href="index-2.html">
+								<img src="assets/images/logo/atlant.png" alt="logo">
+							</a>
 						</div>
 					</div>
-					<div class="header-bottom">
-						<div class="header-wrapper justify-content-lg-end">
-							<div class="mobile-logo d-lg-none">
-								<a href="index-2.html"><img src="assets/images/logo/atlant.png" alt="logo"></a>
-							</div>
-							<div class="menu-area">
-								<ul class="menu">
+					<div class="header-menu-part">
+						<div class="header-top">
+							<div class="header-top-area">
+								<ul class="left">
 									<li>
-										<a href="#0">Inicio</a>
-										<ul class="submenu">
-											<li><a href="index-2.html">Casa Pagina 1</a></li>
-											<li><a href="index-3.html">Casa Pagina 2</a></li>
-										</ul>
+										<i class="icofont-ui-call"></i>(01) 705-4440></i>
 									</li>
-
 									<li>
-										<a href="#0">Caracteristicas</a>
-										<ul class="submenu">
-											<li><a href="about.html">Acerde de</a></li>
-											<li><a href="jaqpot.html">Casino Jackpot</a></li>
-											<li>
-												<a href="#0">Juegos</a>
-												<ul class="submenu">
-													<li><a href="game-list.html">Lista de Juegos 1</a></li>
-													<li><a href="game-list2.html">Lista de Juegos 2</a></li>
-												</ul>
-											</li>
-											<li><a href="partners.html">Socios</a></li>
-											<li><a href="pricing-plan.html">Pricing Plan</a></li>
-											
-											<li>
-												<a href="#0">accounts</a>
-												<ul class="submenu">
-													<li><a href="login.html">login</a></li>
-													<li><a href="signup.html">signup</a></li>
-												</ul>
-											</li>
-											<li>
-												<a href="#0">Shop</a>
-												<ul class="submenu">
-													<li><a href="shop.html">shop</a></li>
-													<li><a href="shop-single.html">Shop Details</a></li>
-													<li><a href="cart-page.html">Cart Page</a></li>
-												</ul>
-											</li>
-											<li><a href="404.html" class="active">404 Page</a></li>
-
-										</ul>
+										<i class="icofont-location-alt"></i> Av. Alfredo Benavides 430, Miraflores 15074</i>
 									</li>
-									<li><a href="tournament.html">Tournament</a></li>
-									<li>
-										<a href="#0">Blog</a>
-										<ul class="submenu">
-											<li><a href="blog.html">Blog</a></li>
-											<li><a href="blog-2.html">Blog 2</a></li>
-											<li><a href="blog-single.html">Blog Single</a></li>
-										</ul>
-									</li>
-									<li><a href="contact.html">Contact</a></li>
 								</ul>
-								<a href="login.html" class="login"><i class="icofont-user"></i> <span>LOG IN</span> </a>
-								<a href="signup.html" class="signup"><i class="icofont-users"></i> <span>SIGN UP</span></a>
-
-								<!-- inconos de alternancia -->
-								<div class="header-bar d-lg-none">
-									<span></span>
-									<span></span>
-									<span></span>
+								<ul class="social-icons d-flex align-items-center">
+									<li>
+										<a href="https://www.facebook.com/AtlanticCityPe" class="fb"><i class="icofont-facebook-messenger"></i></a>
+									</li>
+									<li>
+										<a href="https://x.com/AcityCasino" class="twitter"><i class="icofont-twitter"></i></a>
+									</li>
+									<li>
+										<a href="https://www.youtube.com/@atlanticcitycasinosports" class="Youtube"><i class="icofont-youtube-play"></i></a>
+									</li>
+								</ul>
+							</div>
+						</div>
+						<div class="header-bottom">
+							<div class="header-wrapper justify-content-lg-end">
+								<div class="mobile-logo d-lg-none">
+									<a href="index-2.html"><img src="assets/images/logo/atlant.png" alt="logo"></a>
 								</div>
-								<div class="ellepsis-bar d-lg-none">
-									<i class="icofont-info-square"></i>
+								<div class="menu-area">
+									<ul class="menu">
+										<li>
+											<a href="#0">Casa</a>
+											<ul class="submenu">
+												<li><a href="index-2.html">Pagina Uno</a></li>
+												<li><a href="index-3.html">Pagina Dos</a></li>
+											</ul>
+										</li>
+	
+										<li>
+											<a href="#0">Funciones</a>
+											<ul class="submenu">
+												<li><a href="about.html" class="active">Nosotros</a></li>
+												<li><a href="jaqpot.html">Casino Jackpot</a></li>
+												<li>
+													<a href="#0">Juegos</a>
+													<ul class="submenu">
+														<li><a href="game-list.html">Lista de Juego 1</a></li>
+														<li><a href="game-list2.html">Lista de Juego 2</a></li>
+													</ul>
+												</li>
+												<li><a href="partners.html">Socios</a></li>
+												<li><a href="pricing-plan.html">Plan de Precios</a></li>
+												
+												<li>
+													<a href="#0">Cuentas</a>
+													<ul class="submenu">
+														<li><a href="login.html">Iniciar Sesion</a></li>
+														<li><a href="signup.html">Registrarse</a></li>
+													</ul>
+												</li>
+												<li>
+													<a href="#0">Tienda</a>
+													<ul class="submenu">
+														<li><a href="shop.html">Tienda</a></li>
+														<li><a href="shop-single.html">Detalles de la Tienda</a></li>
+														<li><a href="cart-page.html">Pagina del Carrito</a></li>
+													</ul>
+												</li>
+												<li><a href="404.html">Pagina 404</a></li>
+	
+											</ul>
+										</li>
+										<li><a href="tournament.html">Torneos</a></li>
+										<li>
+											<a href="#0">Blog</a>
+											<ul class="submenu">
+												<li><a href="blog.html">Blog</a></li>
+												<li><a href="blog-2.html">Blog 2</a></li>
+												<li><a href="blog-single.html">Blog Single</a></li>
+											</ul>
+										</li>
+										<li><a href="contact.html">Contactanos</a></li>
+									</ul>
+									<a href="login.html" class="login"><i class="icofont-user"></i> <span>Iniciar Sesion</span> </a>
+									<a href="signup.html" class="signup"><i class="icofont-users"></i> <span>Registrarse</span></a>
+	
+									<!-- iconos de alternancia -->
+									<div class="header-bar d-lg-none">
+										<span></span>
+										<span></span>
+										<span></span>
+									</div>
+									<div class="ellepsis-bar d-lg-none">
+										<i class="icofont-info-square"></i>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-
-	</header>
+	
+		</header>
 	<!-- ==========Fin de la sección de encabezado========== -->
 
 
@@ -178,11 +174,11 @@
 	<section class="pageheader-section" style="background-image: url(assets/images/pageheader/bg.jpg);">
 		<div class="container">
 			<div class="section-wrapper text-center text-uppercase">
-				<h2 class="pageheader-title">error page</h2>
+				<h2 class="pageheader-title">Error de Pagina</h2>
 				<nav aria-label="breadcrumb">
 					<ol class="breadcrumb justify-content-center mb-0">
-						<li class="breadcrumb-item"><a href="index-2.html">Home</a></li>
-						<li class="breadcrumb-item active" aria-current="page">error page</li>
+						<li class="breadcrumb-item"><a href="index-2.html">Casa</a></li>
+						<li class="breadcrumb-item active" aria-current="page">Error de Pagina</li>
 					</ol>
 				</nav>
 			</div>
@@ -200,9 +196,9 @@
 						<img src="assets/images/404.png" alt="404">
 					</div>
 					<div class="zero-content">
-						<h2>Oops! This Page Not Found</h2>
-						<p>We are Really Sorry But the Page you Requested is Missing <i class="icofont-worried"></i></p>
-						<a href="index-2.html" class="default-button reverse-effect"><span>Go Back to Home <i  class="icofont-double-right"></i></span> </a>
+						<h2>Oops! Esta Pagina no Funciona</h2>
+						<p>"Disculpa, la página que buscas no está disponible. <i class="icofont-worried"></i></p>
+						<a href="index-2.html" class="default-button reverse-effect"><span> Regresar a la página principal <i  class="icofont-double-right"></i></span> </a>
 					</div>
 				</div>
 			</div>
@@ -223,7 +219,7 @@
                                     <img src="assets/images/footer/icons/01.png" alt="Phone-icon">
                                 </div>
                                 <div class="lab-content">
-                                    <span>Phone Number : +88012 345 678 912</span>
+                                    <span>Numero Celular : (01) 705-4440</span>
                                 </div>
                             </div>
                         </div>
@@ -235,7 +231,7 @@
                                     <img src="assets/images/footer/icons/02.png" alt="email-icon">
                                 </div>
                                 <div class="lab-content">
-                                    <span>Email : youremail@gmail.com</span>
+                                    <span>Correo : contacto@casinoatlanticcity.com</span>
                                 </div>
                             </div>
                         </div>
@@ -247,7 +243,7 @@
                                     <img src="assets/images/footer/icons/03.png" alt="location-icon">
                                 </div>
                                 <div class="lab-content">
-                                    <span>Address : 30 North West New York</span>
+                                    <span>Dirección : Av. Alfredo Benavides 430, Miraflores 15074</span>
                                 </div>
                             </div>
                         </div>
@@ -265,7 +261,7 @@
                                     <img src="assets/images/logo/atlant.png" alt="logo">
                                 </div>
                                 <div class="fm-item-content">
-                                    <p class="mb-4">Upropriate brand economca sound technolog after covalent technology enable prospective wastng markets whereas propriate and brand economca sound technolog</p>
+                                    <p class="mb-4">Aplicamos tecnologías sólidas y rentables para la marca tras integrar tecnología avanzada, lo que permite acceder a mercados emergentes, manteniendo siempre una marca y tecnología económicamente sólidas.</p>
 									<ul class="match-social-list d-flex flex-wrap align-items-center">
 										<li><a href="#"><img src="assets/images/match/social-1.png" alt="vimeo"></a></li>
 										<li><a href="#"><img src="assets/images/match/social-2.png" alt="youtube"></a></li>
@@ -279,7 +275,7 @@
                         <div class="footer-middle-item-wrapper">
                             <div class="footer-middle-item mb-lg-0">
                                 <div class="fm-item-title">
-                                    <h4>Top jackpot games</h4>
+                                    <h4>Juegos destacados de jackpot</h4>
                                 </div>
                                 <div class="fm-item-content">
                                     <div class="fm-item-widget lab-item">
@@ -288,8 +284,8 @@
                                                 <a href="#"> <img src="assets/images/footer/01.jpg" alt="footer-widget-img" class="rounded-3"></a>
                                             </div>
                                             <div class="lab-content">
-                                                <a href="blog-single.html"><h6>free Poker Game</h6></a>
-                                                <p>Poker: <b>$230</b></p>
+                                                <a href="blog-single.html"><h6>Juego de Poker Gratis</h6></a>
+                                                <p>Poker: <b>S/230.00</b></p>
 												<div class="rating">
 													<i class="icofont-ui-rating"></i>
 													<i class="icofont-ui-rating"></i>
@@ -306,8 +302,8 @@
                                                 <a href="#"><img src="assets/images/footer/02.jpg" alt="footer-widget-img" class="rounded-3"></a>
                                             </div>
                                             <div class="lab-content">
-                                                <a href="blog-single.html"><h6>CLUB Poker Game</h6></a>
-                                                <p>Poker: <b>$290</b></p>
+                                                <a href="blog-single.html"><h6>Partida de Póker del Club</h6></a>
+                                                <p>Poker: <b>S/290.00</b></p>
 												<div class="rating">
 													<i class="icofont-ui-rating"></i>
 													<i class="icofont-ui-rating"></i>
@@ -324,8 +320,8 @@
                                                 <a href="#"><img src="assets/images/footer/03.jpg" alt="footer-widget-img" class="rounded-3"></a>
                                             </div>
                                             <div class="lab-content">
-                                                <a href="blog-single.html"><h6>ROYAL Poker Game</h6></a>
-                                                <p>Poker: <b>$330</b></p>
+                                                <a href="blog-single.html"><h6>"Partida de Póker Real</h6></a>
+                                                <p>Poker: <b>S/330.00</b></p>
 												<div class="rating">
 													<i class="icofont-ui-rating"></i>
 													<i class="icofont-ui-rating"></i>
@@ -344,10 +340,10 @@
                         <div class="footer-middle-item-wrapper">
                             <div class="footer-middle-item-3 mb-lg-0">
                                 <div class="fm-item-title">
-                                    <h4>Our Newsletter</h4>
+                                    <h4>Suscríbete a nuestro boletín</h4>
                                 </div>
                                 <div class="fm-item-content">
-                                    <p>Casina esports organization supported by community leaders</p>
+                                    <p>La organización de eSports Atlantic city cuenta con el apoyo de líderes comunitarios</p>
                                     <form>
                                         <div class="form-group mb-4">
                                             <input type="text" class="form-control" placeholder="Your Name">
@@ -355,7 +351,7 @@
                                         <div class="form-group mb-2">
                                             <input type="email" class="form-control" placeholder="Your Email">
                                         </div>
-										<button type="submit" class="default-button"><span>Send Massage <i class="icofont-circled-right"></i></span></button>
+										<button type="submit" class="default-button"><span> Enviar Mensaje <i class="icofont-circled-right"></i></span></button>
                                     </form>
                                 </div>
                             </div>
@@ -369,7 +365,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="footer-bottom-content text-center">
-                            <p>&copy;2022 <a href="index-2.html">Casina</a> - All Rights Reserved. Developed by <a href="https://themeforest.net/user/codexcoder">CodexCoder</a></p>
+                            <p>&copy;2025 <a href="index-2.html">Atlantic city</a> - Todos los derechos reservados. Desarrollado por <a href="https://github.com/skies120/pf-casino">Grupo de Lunes</a></p>
                         </div>
                     </div>
                 </div>
